2010-07-18 d+w3m@vdr.jp

	* [w3m-dev 04319] Re: w3m's bugs from bugs.debian.org
	http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=242599#21
	* file.c (is_html_type): added.
	(examineFile, loadGeneralFile, _saveBuffer)
	(openGeneralPagerBuffer, reloadBuffer): use is_html_type() instead
	of strcasecmp().
	(loadGeneralFile): set f.guess_tupe
	* display.c (displayBuffer): use is_html_type() instead of strcasecmp().
	* buffer.c (reshapeBuffer): use is_html_type() instead of strcasecmp().
	* backend.c (internal_get): use is_html_type() instead of strcasecmp().

2010-07-18 Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 04286] Re: break textform when buffer back
	* form.c (form_update_line): set line->size

2010-07-18 d+w3m@vdr.jp

	* [w3m-dev 04319] Re: w3m's bugs from bugs.debian.org
	* doc/w3m.1: fix typo.
	* doc-jp/w3m.1: update
	* terms.c: fix version check logic for FreeBSD
	http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=493486
	* scripts/w3mman/w3mman2html.cgi.in (Content-Type):
	"MAN_KEEP_FORMATTING=1"
	http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=325699
	* istream.c (ssl_check_cert_ident): replace \0 to make full string
	visible to user (CVE-2010-2074).

2007-06-07  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 04279] charset
	* libwc/ces.h, libwc/charset.c: set charset to Shift_JIS, when locale 
	  is japanese, jp_JP.PCK, ja_JP.IBM-932, ja_JP.IBM-943, or windows-31j.

2007-06-07  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 04278] Re: segfault on CentOS4.5/libgc6.8
	* term.c: add handling xterm-incompatible terminals without gpm.

2007-06-04  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 04271] vi_prec_num
	* main.c: make number prefixes working when vi_prec_num=0.

2007-05-31  Dai Sato <satodai@w3m.jp>

	* w3m 0.5.2
	* version.c.in: update
	* doc/README: version 0.5.2, release date, maintainer
	* doc-jp/README: ditto
	* po/w3m.pot, ja.po: ditto
	* NEWS: update
	* configure.ac: version 0.5.2